Implementação inicial do módulo de dominação territorial